--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "4.6.1"
   },
   "scripts": {
-    "dev": "nodemon",
-    "production": "pm2 start loader.js --name backend"
+    "dev": "nodemon --inspect",
+    "production": "pm2 start loader.js --name MicroServiceSample"
   },
   "author": "Tiago Carmo Santos",
   "license": "ISC",
