--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,15 +3,24 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
+    "compounds": [
+        {
+            "name": "API_DEV",
+             "configurations": ["MongoDB", "Launch API" ]
+        }
+    ],
     "configurations": [
         {
-            "name": "Node: Nodemon",
-            "processId": "${command:PickProcess}",
-            "request": "attach",
-            "skipFiles": ["<node_internals>/**"],
-            "type": "node",
-            "restart": true,
-            "protocol": "inspector"
+            "name": "MongoDB",
+            "request": "launch",
+            "type": "node-terminal",
+            "command": "npm run database",
+        },
+        {
+            "name": "Launch API",
+            "request": "launch",
+            "type": "node-terminal",
+            "command": "npm run dev",
         }
     ]
 }
