--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "express-query-int": "^2.0.0",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.5",
-    "mongoose": "^4.13.12",
+    "mongoose": "^5.12.1",
     "mongoose-paginate": "^5.0.3",
     "node-restful": "^0.2.6",
-    "pm2": "^2.10.2"
+    "pm2": "^2.10.2",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.19.4"
   }
 }
