change database from MongoDB mLab to MongoDB Atlas

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-authSecret='4bc12841b901f1716f71ab76b99699d6'
-MONGOLAB_URI='mongodb+srv://admuser:Softtek01@cluster0.pg74r.mongodb.net/apptemplatesample?authSource=admin&replicaSet=atlas-tjga6r-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true'
+authSecret="4bc12841b901f1716f71ab76b99699d6"
+MONGOLAB_URI="mongodb+srv://admuser:Softtek01@cluster0.pg74r.mongodb.net/apptemplatesample?authSource=admin&replicaSet=atlas-tjga6r-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true"
